--- a/public/empty.html
+++ b/public/empty.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
     <style>
-        body {
-            background-image: url('https://img.freepik.com/free-vector/space-monochrome-elements-set-with-astronaut-shuttles-rockets-cosmic-objects-observatory-radar-isolated_1284-33836.jpg');
-            background-size: 600px 600px;
-            background-position: 0 0;
-            background-repeat: repeat;
-            backdrop-filter: blur(7px);
-            width: 100vw;
-            height: 100vh;
-            display: grid;
-            place-content: center;
-            margin: 0;
-            font-family: monospace;
-            animation: moveBackground 10s linear infinite;
-        }
+      body {
+        background-image: url("https://img.freepik.com/free-vector/space-monochrome-elements-set-with-astronaut-shuttles-rockets-cosmic-objects-observatory-radar-isolated_1284-33836.jpg");
+        background-size: 600px 600px;
+        background-position: 0 0;
+        background-repeat: repeat;
+        backdrop-filter: blur(7px);
+        width: 100vw;
+        height: 100vh;
+        display: grid;
+        place-content: center;
+        margin: 0;
+        font-family: monospace;
+        animation: moveBackground 10s linear infinite;
+      }
 
-        @keyframes moveBackground {
-            from {
-                background-position: 0 0;
-            }
-            to {
-                background-position: 600px 600px;
-            }
+      @keyframes moveBackground {
+        from {
+          background-position: 0 0;
         }
+        to {
+          background-position: 600px 600px;
+        }
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>This is an empty page</h1>
-</body>
-
+  </body>
 </html>
